--- a/PA2/TODO.txt
+++ b/PA2/TODO.txt
@@ -12,3 +12,8 @@
 
 ****Logic****
 1. Create class which handles: wining conditions, box values and etc.
+
+
+****Testing****
+1. Ask professor how to test gui 
+2. Test everything else
