--- a/PA2/TODO.txt
+++ b/PA2/TODO.txt
@@ -9,7 +9,7 @@
 
 ****Board****
 1. reorgonize board.java to make it more customizable for future
-
+2. make it so you cannot overwrite a non null square in board
 ****Logic****
 1. Create class which handles: wining conditions, box values and etc.
 
